# cadagent

./: .gitignore  AGENTS.md  README.md  cloudbuild.yaml  pyproject.toml
docs/external_api_guide/: ckan-api-guide.md
docs/improvements/: data-quality-fixes.md  lessons-learned.md  pipeline-optimization.md  tier3-dim-table-population.md
docs/pipeline_schema/: goc_pipeline_and_mapping_plan.md
docs/repo_schema/: goc_repo_schema.md
docs/tutorials/: deploy-to-gcp.md
docs/warehouse_schema/: goc_bigquery_schema_summary.md
infra/cloud_run/: agent_api.yaml  ingest.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
mappings/: attribute_dictionary.yaml  finance_dimensions.yaml  geography_dictionary.yaml  junk_headers.yaml  metric_dictionary.yaml  scenario_dictionary.yaml
scripts/: backfill_department.py  reprocess_document.py  review_mappings.py  seed_mappings.py
services/agent_api/: Dockerfile  citation.py  config.py  main.py  requirements.txt  sql_validator.py  tools.py
services/extract/: Dockerfile  config.py  main.py  requirements.txt  run.py
services/ingest/: Dockerfile  config.py  main.py  requirements.txt  run.py
services/normalize/: Dockerfile  config.py  main.py  requirements.txt  run.py
shared/clients/: bigquery.py  gcs.py  goc_api.py
shared/config/: logging.py  settings.py
shared/models/: document.py  observation.py  table.py
shared/utils/: hashing.py  text_normalization.py  time_parsing.py
tasks/: lessons.md  todo.md
tests/: conftest.py
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  (+2 more)
(+54 files in other folders)
